--- a/src/common/base.css
+++ b/src/common/base.css
@@ -24,27 +24,24 @@ h1 {
   }
 
   :global(#navigation) {
-    padding: 10px 15px;
     background-color: #F9E957;
+    list-style: none;
+    margin: 0 0 3px 0;
+    padding: 3px;
 
-    ul {
+    li {
+      display: inline-block;
+      font-size: 18px;
+      font-weight: bold;
       list-style: none;
-      margin: 0;
-      padding: 0;
+      padding: 0 5px;
 
-      li {
-        display: inline-block;
-        font-size: 18px;
-        font-weight: bold;
-        list-style: none;
+      a {
+        color: #313131;
+        text-decoration: none;
 
-        a {
-          color: #555;
-          text-decoration: none;
-
-          &:hover {
-            text-decoration: underline;
-          }
+        &:hover {
+          text-decoration: underline;
         }
       }
     }
