--- a/src/pages/transportation/style.css
+++ b/src/pages/transportation/style.css
@@ -1,3 +1,12 @@
+.content {
+  margin-top: 20px;
+}
+
+.arrival {
+  color: #d8ce3c;
+  font-weight: bold;
+}
+
 .lastTime {
   font-size: x-small;
 }
@@ -9,6 +18,12 @@
 table {
   border:0;
   border-collapse:collapse;
+  width: 100%;
+}
+
+thead {
+  background-color: #202055;
+  border-bottom: 1px solid #79c2ff;
 }
 
 tr, td {
