changed the border color

--- a/src/pages/transportation/style.css
+++ b/src/pages/transportation/style.css
@@ -23,7 +23,7 @@ table {
 
 thead {
   background-color: #202055;
-  border-bottom: 1px solid #79c2ff;
+  border-bottom: 1px solid #275173;
 }
 
 tr, td {
